<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="create_contact">Create contact</string>
    <string name="send_message">Send message to contact</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="errorCreateContact">Please input firstname and phone</string>
    <string name="contactCreate">Contact create</string>
    <string name="createContactFail">Create is fail</string>
    <string name="errorUpdate">Update contact fail</string>
    <string name="updateContactSuccess">Update contact success</string>
    <string name="addPermissionSendSMS">Please activate permission for send SMS</string>
    <string name="msgSendSuccess">Send Success</string>
    <string name="viewCreateContact">New contact</string>
    <string name="viewEditContact">Edit contact</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="reset">Reset</string>
</resources>
